--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -4,11 +4,12 @@
 .container-section {
     display: flex;
     background-color: var(--fonte-escura-bg2);
-    height: 50rem;
+    height: 60rem;
     box-shadow: 
         inset -50px -50px 50px rgba(255, 255, 255, 0.01),
         inset 50px 50px 50px rgba(0,0,0,0.2);
     border-top: var(--fonte-primaria-clara) solid 6px;
+    border-bottom: var(--fonte-primaria-clara) solid 6px;
  }
 
 /* CONTAINER */
@@ -40,6 +41,30 @@
     transition: all 0.5s linear;
 }
 
+
+.background-box {
+    position: absolute;
+    margin-left: 2%;
+    top: 96rem;
+    display: flex;
+    width: 650px;
+    height: 90px;
+    background-color: var(--fonte-primaria-clara);
+    align-items: center;
+    justify-content: center;
+    font-size: 42px;
+    font-family: "Roboto", sans-serif;
+    border-radius: 20px;
+    color: var(--font-color-cinza);
+    filter: saturate(1.7);
+    letter-spacing: 4px;
+}
+
+.background-box strong {
+    color: var(--fonte-secundaria-clara);
+    filter: saturate(0.5);
+}
+
 /* IMAGENS TECNOLOGIAS */
 
 
@@ -57,7 +82,7 @@
 
 .container-projects {
     width: 100%;
-    margin: 5% 10%;
+    margin: 10% 10%;
     gap: 64px;
     display: flex;
     justify-content: center;
@@ -65,7 +90,7 @@
 }
 
 
-@media (max-width: 1640px) and (min-width: 350px) {
+@media (max-width: 1024px) and (min-width: 350px) {
 
     .container-section {
         height: 70rem;
@@ -88,4 +113,10 @@
         opacity: 0.7;
         transition: all 0.5s linear;
     }
+    
+    .background-box {
+        width: 0;
+        font-size: 0;
+    }
+
 }
