--- a/src/Components/ProjetoIndividual/ProjetoIndividual.css
+++ b/src/Components/ProjetoIndividual/ProjetoIndividual.css
@@ -1,5 +1,13 @@
 /* PROJETO CONTAINER */
 
+.project-content {
+    transform: rotateX(90deg);
+    transform-origin: bottom;
+    transition: all 0.s;
+    gap: 4px;
+}
+
+
 .project {
     width: 400px;
     height: 300px;
@@ -9,6 +17,8 @@
     flex-wrap: wrap;
     transition: 0.5s;
 }
+
+
 
 .project:hover p {
     opacity: 1;
@@ -33,7 +43,7 @@
     margin: 0;
     margin-left: 4%;
     font-size: 14px;
-    font-family: "Roboto" , sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
     padding: 10px;
     line-height: 1.2;
@@ -41,10 +51,7 @@
     transition: 0.3s;
 }
 
-/* PROJETO CONTAINER */
-
-
-/* CONTAINER TECHS DOS PROJETOS */
+/* TECNOLOGIAS DOS PROJETOS */
 
 .mini-container {
     display: flex;
@@ -60,7 +67,40 @@
     filter: saturate(0);
 }
 
-/* CONTAINER TECHS DOS PROJETOS */
+
+.project:hover .imagem-project {
+    opacity: 0;
+}
+
+.project:hover .project-content {
+    transition-delay: 0.4s;
+    transform: rotateX(0deg);
+}
+
+
+/* IMAGEM PRÉ HOVER DO PROJETO */
+
+
+
+.imagem-project {
+    position: absolute;
+    display: flex;
+    width: 400px;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--font-color-cinza);
+    transition: 0.8s;
+    border-radius: 8px;
+}
+
+.imagem-project img {
+    width: 90%;
+    height: 90%;
+    align-items: center;
+}
+
+
 
 
 /* BOTÕES LINKS PROJETOS */
@@ -77,7 +117,7 @@
     align-items: center;
     justify-content: center;
     font-size: 14px;
-    font-family: "Exo" , sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 400;
     gap: 8px;
     width: 150px;
@@ -88,6 +128,7 @@
     border: 2px solid var(--fonte-primaria-clara);
     border-radius: 10px;
     transition: 0.3s;
+    cursor: pointer;
 }
 
 .preview-button img {
@@ -104,13 +145,14 @@
     align-items: center;
     justify-content: center;
     font-size: 14px;
-    font-family: "Exo" , sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 400;
     gap: 8px;
     text-decoration: none;
     border: 2px solid var(--fonte-primaria-clara);
     border-radius: 10px;
     transition: 0.5s;
+    cursor: pointer;
 }
 
 .preview-button:hover {
@@ -124,7 +166,7 @@
 
 
 .repo-button:hover img {
-    filter: saturate(1); 
+    filter: saturate(1);
 }
 
 .project:hover .mini-container img {
@@ -136,7 +178,7 @@
     filter: saturate(0);
 }
 
-/* BOTÕES PROJETOS */
+
 
 /* DARK MODE */
 
@@ -153,29 +195,40 @@
     border-color: var(--fonte-secundaria-escura);
 }
 
-/* DARK MODE */
+
 
 
 /* RESPONSIVIDADE */
 
 @media (max-width: 1040px) and (min-width: 350px) {
     .project {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 4px;
         width: 200px;
         height: 150px;
         border: 4px solid var(--fonte-primaria-clara);
-        border-radius: 15px;
+        border-radius: 10px;
         color: var(--font-color-cinza);
         flex-wrap: wrap;
+    }
+
+    .project-content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin: 5%;
+        transform: rotateX(90deg);
+    }
+
+    .imagem-project {
+        width: 200px;
+        height: 150px;
+        border-radius: 5px;
     }
 
     .project h1 {
         font-weight: 400;
         opacity: 0.6;
-        font-size: 16px;
+        font-size: 14px;
         font-family: "Exo", sans-serif;
         transition: 0.3s;
     }
@@ -183,8 +236,9 @@
     .project p {
         margin: 0;
         margin-left: 4%;
-        font-size: 10px;
-        font-family: "Roboto" , sans-serif;
+        font-size: 8px;
+        text-align: center;
+        font-family: "Roboto", sans-serif;
         font-weight: 200;
         padding: 2px;
         line-height: 1.1;
@@ -203,7 +257,8 @@
         justify-content: center;
         gap: 6px;
         margin-left: 5%;
-        margin-top: 20%;
+        margin-top: 25%;
+        transition: all 0.8s;
     }
 
     .repo-button {
@@ -216,33 +271,15 @@
         align-items: center;
         justify-content: center;
         font-size: 14px;
-        font-family: "Exo" , sans-serif;
+        font-family: "Exo", sans-serif;
         font-weight: 400;
         gap: 8px;
         text-decoration: none;
         border: 2px solid var(--fonte-primaria-clara);
         border-radius: 10px;
-        transition: 0.5s;
+        transition: 0.8s;
     }
 
-    .repo-button {
-        margin-right: 5%;
-        padding: 5px;
-        background-color: transparent;
-        color: #fff;
-        width: 90px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size:  12px;
-        font-family: "Exo" , sans-serif;
-        font-weight: 400;
-        gap: 8px;
-        text-decoration: none;
-        border: 2px solid var(--fonte-primaria-clara);
-        border-radius: 10px;
-        transition: 0.5s;
-    }
 
     .repo-button img {
         width: 20px;
@@ -254,7 +291,7 @@
         align-items: center;
         justify-content: center;
         font-size: 12px;
-        font-family: "Exo" , sans-serif;
+        font-family: "Exo", sans-serif;
         font-weight: 200;
         width: 90px;
         color: #fff;
@@ -265,6 +302,6 @@
         border-radius: 10px;
         transition: 0.3s;
     }
-    
-    
+
+
 }
