--- a/src/Components/Contato/Contato.css
+++ b/src/Components/Contato/Contato.css
@@ -1,5 +1,5 @@
 .container-contato {
-    height: 60rem;
+    width: 100%;
 }
 
 .container-contato h1 {
@@ -7,10 +7,10 @@
     margin-top: 3%;
     margin-left: 6%;
     font-weight: 700;
-    border-bottom: 8px solid var(--fonte-primaria-clara);
+    border-bottom: 4px solid var(--fonte-primaria-clara);
     text-align: center;
-    font-size: 34px;
-    width: 160px;
+    font-size: 26px;
+    max-width: 120px;
 }
 
 
@@ -50,13 +50,13 @@
 .clickcopy {
     display: flex;
     align-items: center;
-    gap: 68px;
-    width: 570px;
+    justify-content: center;
+    gap: 8px;
+    width: 30rem;
     height: 68px;
     border: 4px solid var(--fonte-secundaria-clara);
     border-radius: 20px;
-    padding: 10px;
-    margin-bottom: 2%;
+    padding: 5px;
     background-color: var(--fonte-primaria-clara);
 }
 
@@ -64,18 +64,74 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100px;
-    height: 40px;
-    border-right: 3px solid #000;
+    width: 60px;
+    height: 20px;
+    border-right: 2px solid #000;
 }
 
 .clickcopy span {
     font-size: 22px;
+    letter-spacing: 2px;
     font-family: "Roboto", sans-serif;
-    text-align: center;
 }
 
 .icon img {
     width: 25px;
     height: 20px;
+}
+
+@media (max-width: 1024px) and (min-width: 350px) {
+
+    .container-contato {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .container-contato h1 {
+        text-align: center;
+        font-size: 26px;
+        margin-top: 5%;
+    }
+
+    .clickcopy {
+        width: 20rem;
+        height: 4rem;
+        padding: 0;
+    }
+
+    .clickcopy span {
+        font-size: 18px;
+        letter-spacing: normal;
+    }
+
+    .container-div-img img {
+        width: 100%;
+        height: 100%;
+     }
+
+
+    .icon img {
+        width: 25px;
+        height: 18px;
+    }
+
+    .container-copys {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        gap: 28px;
+        width: 100%;
+    }
+
+    .container-copys h2{
+        text-align: center;
+        font-size: 12px;
+        border-bottom: solid;
+        border-width: 2px;
+        font-size: 24px;
+        letter-spacing: normal;
+    }
 }
