--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -3,7 +3,7 @@
 
 .container-section {
     display: flex;
-    background-color: var(--fonte-escura-bg2);
+    background-color: var(--fonte-background-escura);
     height: 60rem;
     box-shadow: 
         inset -50px -50px 50px rgba(255, 255, 255, 0.01),
