--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --fonte-secundaria-escura:  #E84545;
   --font-color-cinza: #fafafa;
   --fonte-background-escura: #2B2E4A;
-  --fonte-background-clara: #000000;
+  --fonte-background-clara: #2B2E4A;
 }
 
 body {
