--- a/src/Components/SobreMim/SobreMim.css
+++ b/src/Components/SobreMim/SobreMim.css
@@ -9,6 +9,9 @@
     inset -50px -50px 50px rgba(255, 255, 255, 0.01),
     inset 50px 50px 50px rgba(0,0,0,0.2);
     background-color: var(--fonte-secundaria-clara);
+    background-image: url(/public/assets/background.png);
+    background-size: cover no-repeat;
+    background-position: center center;
     border-top: var(--fonte-primaria-clara) 10px solid;
     transition: all 1s;
     flex-wrap: wrap;
@@ -143,7 +146,7 @@
 
         .Secao2.dark {
             border-top: var(--fonte-secundaria-escura) 8px solid;
-            background-color: var(--fonte-background-escura);
+            background-color: var(--fonte-background-clara);
         }
         
         .Secao2.dark .SobreMim h1 {
