--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,10 +1,101 @@
-
-
 footer {
-    margin-top: 6.25rem;
-    height: 10rem;
-    background-color: var(--fonte-primaria-clara);
+    margin-top: 2.25rem;
+    height: 15rem;
+    background-color: var(--fonte-background-clara);
     background-image: url(/public/assets/background.png);
     background-size: cover no-repeat;
     background-position: center center;
+    transition: 1s;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
+.div-socials {
+    width: 30%;
+    margin-right: 5%;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    color: var(--font-color-cinza);
+    font-family: "Exo", sans-serif;
+    font-weight: 700;
+}
+
+.div-social-img {
+    display: flex;
+    justify-content: center;
+    max-width: 100%;
+    gap: 1rem;
+    margin-top: 5%;
+}
+
+.div-social-img p {
+    color: var(--font-color-cinza);
+    font-size: 0.625rem;
+    text-align: center;
+    font-weight: 500;
+    background-color: var(--fonte-primaria-clara);
+    padding: 5px 8px;
+    border-radius: 10px;
+    opacity: 0;
+}
+
+
+.div-social-img img {
+    padding: 5px 10px;
+    filter: brightness(4);
+}
+
+.div-social-img img:hover {
+    transform: scale(1.3);
+    transition: all 0.6s;
+    filter: drop-shadow(#8AAAE5 0.0625rem 0.0625rem 0.625rem);
+}
+
+.div-social-img a:hover p {
+    transition: all 0.5s;
+    opacity: 1;
+    filter: drop-shadow(#365486 0.0625rem 0.0625rem 0.625rem);
+}
+
+@media (max-width: 1024px) and (min-width: 350px) {
+    .div-socials {
+        width: 30%;
+        margin-left: 10%;
+        display: flex;
+        text-align: center;
+        flex-direction: column;
+        color: var(--font-color-cinza);
+        font-family: "Exo", sans-serif;
+        font-weight: 600;
+        font-size: 16px;
+        margin-top: 5%;
+    }
+
+    .div-social-img {
+        display: flex;
+        justify-content: center;
+        max-width: 100%;
+        gap: 4px;
+        margin-top: 5%;
+    }
+
+    .div-social-img img {
+        width: 35px;
+    }
+
+    footer {
+        margin-top: 2.25rem;
+        height: 15rem;
+        background-color: var(--fonte-background-clara);
+        background-image: url(/public/assets/background.png);
+        background-size: cover no-repeat;
+        background-position: center center;
+        transition: 1s;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    
 }
