--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -21,7 +21,7 @@
 
 .background-box {
     position: absolute;
-    margin-left: 2%;
+    margin: 0 5%;
     top: 92rem;
     display: flex;
     width: 650px;
@@ -76,19 +76,18 @@
 }
 
 
-@media (max-width: 1024px) and (min-width: 350px) {
+@media (max-width: 1040px) and (min-width: 350px) {
 
     .container-section {
-        height: 70rem;
+        height: 60rem;
     }
 
     .container-projects {
-        flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 80px;
+        gap: 40px;
         margin-left: 0%;
-        margin-right: 2rem;
+        margin-right: 0rem;
     };
 
     .container-techs img {
@@ -101,8 +100,17 @@
     }
     
     .background-box {
-        width: 0;
-        font-size: 0;
+        top: 118.5rem;
+        width: 310px;
+        height: 40px;
+        left: 1.5rem;
+        margin: 0 0%;
+        border-radius: 12px;
+        letter-spacing: 2px;
+    }
+    
+    .background-box span {
+        font-size: 16px;
     }
 
 }
