--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -8,25 +8,41 @@ footer {
     transition: 1s;
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: space-around;
 }
+
+
+
+.container-h1 {
+    margin-left: 20%;
+    width: 100%;
+    text-align: center;
+    height: 100%;
+    display: flex;
+    color: var(--font-color-cinza);
+    font-size: 0.525rem;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+
 
 .div-socials {
     width: 30%;
-    margin-right: 5%;
     display: flex;
-    text-align: center;
     flex-direction: column;
+    text-align: center;
     color: var(--font-color-cinza);
     font-family: "Exo", sans-serif;
     font-weight: 700;
 }
 
 .div-social-img {
+    width: 100%;
     display: flex;
+    text-align: center;
     justify-content: center;
-    max-width: 100%;
-    gap: 1rem;
+    gap: 0.5rem;
     margin-top: 5%;
 }
 
@@ -62,7 +78,6 @@ footer {
 @media (max-width: 1024px) and (min-width: 350px) {
     .div-socials {
         width: 30%;
-        margin-left: 10%;
         display: flex;
         text-align: center;
         flex-direction: column;
@@ -76,7 +91,6 @@ footer {
     .div-social-img {
         display: flex;
         justify-content: center;
-        max-width: 100%;
         gap: 4px;
         margin-top: 5%;
     }
