--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,4 +1,3 @@
-
 /*  HEADER CONTAINER */
 
 .header {
@@ -11,52 +10,95 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px;
+    padding: 0.5rem 0.5rem;
+    transition: 0.7s;
+    opacity: 1;
+}
+
+.header.sticky {
+    z-index: 20;
+    height: 2.225rem;
+    width: 100%;
+    backdrop-filter: blur(0.4375rem);
+    position: fixed;
+    transition: 0.7s;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    opacity: 0.925;
+}
+
+.header.sticky:hover {
+    opacity: 1;
+}
+
+
+.header.sticky .container-nav a{
+    font-size: 16px;
+    padding: 0.3rem 0.3rem;
+}
+
+.header.sticky .container-nav a:hover {
+    border-width: 2px;
 }
 
 /*  HEADER CONTAINER */
 
 
-/* CONTAINER CHILD */
-
-.Navegacao {
+.container-nav {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 30px;
+    gap: 20px;
 }
 
-/* CONTAINER CHILD */
-
-.Navegacao li {
-    font-size: 1.1rem;
+.container-nav a{
     list-style: none;
-    color: #fafafa;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    border-bottom: var(--fonte-primaria-clara) solid 4px;
-    text-align: center;
+    color: var(--font-color-cinza);
+    font-family: "Exo", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 0.4rem 0.4rem;
+    border-bottom: 4px solid transparent;
+    transition: all 0.5s;
+    scroll-behavior: smooth;
 }
 
-.Navegacao li:hover {
+.container-nav a:hover {
+    border-top-left-radius: 15%;
+    border-top-right-radius: 15%;
+    border-bottom: 4px solid #fff;
     cursor: pointer;
 }
 
-/* RESPONSIVIDADE */
 
-@media (max-width: 550px) and (min-width: 350px) {
+@media (max-width: 1040px) and (min-width: 350px) {
 
-    .Navegacao {
-        flex-wrap: wrap;
+    .header {
+        height: 4rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0rem 0rem;
+        transition: 0.7s;
+        opacity: 1;
     }
 
-    .Navegacao li {
-        font-size: 20px;
-        align-items: center;
+    .container-nav {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    .container-nav a{
+        font-size: 16px;
+        font-weight: 500;
+    }
+
+    .container-nav a:hover {
+        border-width: 2px;
     }
 }
 
-/* RESPONSIVIDADE */
+
 
 
 /* DARK MODE */
@@ -64,11 +106,9 @@
 .header.dark {
     background-color: var(--fonte-primaria-escura);
     border-bottom: solid var(--fonte-secundaria-escura) 4px;
-    height: 4rem;
-    transition: all 0.6s linear;
 }
 
-.header.dark .Navegacao li {
+.header.dark .Navegacao a{
     border-color: var(--fonte-secundaria-escura);
     color: var(--font-color-cinza);
 }
