--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -100,17 +100,11 @@
     }
     
     .background-box {
-        top: 118.5rem;
-        width: 310px;
-        height: 40px;
-        left: 1.5rem;
-        margin: 0 0%;
-        border-radius: 12px;
-        letter-spacing: 2px;
+        display: none;
     }
     
     .background-box span {
-        font-size: 16px;
+        font-size: 1.425rem;
     }
 
 }
