--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -8,27 +8,32 @@ footer {
     transition: 1s;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 2% 5% 0;
+}
+
+.dev-img {
+    width: 14rem;
+    height: 14rem;
 }
 
 
 
 .container-h1 {
-    margin-left: 20%;
-    width: 100%;
-    text-align: center;
-    height: 100%;
     display: flex;
     color: var(--font-color-cinza);
-    font-size: 0.525rem;
-    justify-content: center;
+    height: 100%;
     align-items: flex-end;
+    margin-top: auto;
+}
+
+.container-h1 h1 {
+    font-size: 0.925rem;
 }
 
 
 
 .div-socials {
-    width: 30%;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -76,40 +81,33 @@ footer {
 }
 
 @media (max-width: 1024px) and (min-width: 350px) {
-    .div-socials {
-        width: 30%;
-        display: flex;
-        text-align: center;
-        flex-direction: column;
-        color: var(--font-color-cinza);
-        font-family: "Exo", sans-serif;
-        font-weight: 600;
-        font-size: 16px;
-        margin-top: 5%;
-    }
-
-    .div-social-img {
-        display: flex;
-        justify-content: center;
-        gap: 4px;
-        margin-top: 5%;
-    }
-
-    .div-social-img img {
-        width: 35px;
-    }
 
     footer {
-        margin-top: 2.25rem;
-        height: 15rem;
-        background-color: var(--fonte-background-clara);
-        background-image: url(/public/assets/background.png);
-        background-size: cover no-repeat;
-        background-position: center center;
-        transition: 1s;
         display: flex;
-        align-items: flex-start;
-        justify-content: center;
+        align-items: center;
+        flex-direction: column-reverse;
+        justify-content:center;
+        padding: 5% 2% 0;
+    }
+
+    .container-h1 {
+        height: 20%;
     }
     
+    .container-h1 h1 {
+        font-size: 0.825rem;
+    }
+
+    .div-socials {
+        margin-top: 15%;
+        display: flex;
+        color: var(--font-color-cinza);
+        font-family: "Exo", sans-serif;
+        font-weight: 700;
+    }
+
+
+    .dev-img {
+        display: none;
+    }
 }
