--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -74,11 +74,15 @@ footer {
     filter: drop-shadow(#8AAAE5 0.0625rem 0.0625rem 0.625rem);
 }
 
+
+
 .div-social-img a:hover p {
     transition: all 0.5s;
     opacity: 1;
     filter: drop-shadow(#365486 0.0625rem 0.0625rem 0.625rem);
 }
+
+
 
 @media (max-width: 1024px) and (min-width: 350px) {
 
@@ -99,15 +103,33 @@ footer {
     }
 
     .div-socials {
-        margin-top: 15%;
         display: flex;
         color: var(--font-color-cinza);
         font-family: "Exo", sans-serif;
-        font-weight: 700;
+        font-weight: 500;
     }
 
 
     .dev-img {
         display: none;
     }
+}
+
+
+/* DARK MODE */
+
+div-social-img.dark img:hover {
+    transform: scale(1.3);
+    transition: all 0.6s;
+    filter: drop-shadow(#E84545 0.0625rem 0.0625rem 0.625rem);
+}
+
+.div-social-img.dark a:hover p {
+    transition: all 0.5s;
+    opacity: 1;
+    filter: drop-shadow(#903749 0.0625rem 0.0625rem 0.625rem);
+}
+
+.div-social-img.dark p {
+    background-color: var(--fonte-secundaria-escura);
 }
