--- a/src/Components/ProjetoIndividual/ProjetoIndividual.css
+++ b/src/Components/ProjetoIndividual/ProjetoIndividual.css
@@ -1,25 +1,27 @@
 /* PROJETO CONTAINER */
 
 .project-content {
-    transform: rotateX(90deg);
-    opacity: 0;
     transform-origin: bottom;
     gap: 4px;
     transition: 0.6s;
+    height: 100%;
 }
 
-
 .project {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 25px;
+    align-items: center;
     width: 400px;
-    height: 300px;
+    height: 350px;
+    padding: 0.325rem;
     border: 0.3125rem solid var(--fonte-primaria-clara);
     border-radius: 15px;
     color: var(--font-color-cinza);
     flex-wrap: wrap;
     transition: 0.5s;
 }
-
-
 
 .project:hover p {
     opacity: 1;
@@ -32,9 +34,7 @@
 .project h1 {
     font-weight: 400;
     opacity: 0.6;
-    text-align: start;
-    margin-left: 8%;
-    margin-top: 4%;
+    padding: auto;
     font-size: 22px;
     font-family: "Exo", sans-serif;
     transition: 0.3s;
@@ -42,11 +42,10 @@
 
 .project p {
     margin: 0;
-    margin-left: 4%;
     font-size: 14px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    padding: 10px;
+    padding: 0.5rem;
     line-height: 1.2;
     opacity: 0.6;
     transition: 0.3s;
@@ -68,79 +67,20 @@
     filter: saturate(0);
 }
 
-
-.project:hover .imagem-project {
-    opacity: 0;
-}
-
-.project:hover .project-content {
-    transform: rotateX(0deg);
-    opacity: 1;
-}
-
-
-/* IMAGEM PRÉ HOVER DO PROJETO */
-
-
-
-.imagem-project {
-    position: absolute;
-    display: flex;
-    width: 400px;
-    height: 300px;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--font-color-cinza);
-    transition: 0.6s;
-    border-radius: 10px;
-    transform-origin: bottom;
-    
-}
-
-.imagem-project img {
-    width: 90%;
-    height: 90%;
-    align-items: center;
-}
-
-
-
-
 /* BOTÕES LINKS PROJETOS */
 
 .button-container {
     display: flex;
-    justify-content: space-between;
-    margin-left: 6%;
-    margin-top: 15%;
-}
-
-.preview-button {
-    display: flex;
-    align-items: center;
     justify-content: center;
-    font-size: 14px;
-    font-family: "Exo", sans-serif;
-    font-weight: 400;
-    gap: 8px;
-    width: 150px;
-    color: #fff;
-    background-color: var(--fonte-primaria-clara);
-    padding: 10px;
-    text-decoration: none;
-    border: 2px solid var(--fonte-primaria-clara);
-    border-radius: 10px;
-    transition: 0.3s;
-    cursor: pointer;
+    align-items: center;
+    gap: 1rem;
+    width: 100%; /* Adicionei para garantir que o contêiner de botões use toda a largura disponível */
 }
 
-.preview-button img {
-    width: 25px;
-}
 
 .repo-button {
     margin-right: 5%;
-    padding: 5px;
+    padding: 10px;
     background-color: transparent;
     color: #fff;
     width: 90px;
@@ -158,15 +98,11 @@
     cursor: pointer;
 }
 
-.preview-button:hover {
-    scale: 1.03;
-}
 
 
 .project:hover {
     box-shadow: 0px 5px 15px rgba(128, 128, 128, 0.6);
 }
-
 
 .repo-button:hover img {
     filter: saturate(1);
@@ -181,8 +117,6 @@
     filter: saturate(0);
 }
 
-
-
 /* DARK MODE */
 
 .project.dark {
@@ -193,60 +127,46 @@
     border-color: var(--fonte-primaria-escura);
 }
 
-.project.dark .preview-button {
-    background-color: var(--fonte-secundaria-escura);
-    border-color: var(--fonte-secundaria-escura);
-}
-
-
 
 
 /* RESPONSIVIDADE */
 
 @media (max-width: 1020px) and (min-width: 350px) {
     .project {
-        width: 200px;
-        height: 150px;
+        width: 100%; /* Altere para 100% para ocupar toda a largura disponível */
+        max-width: 400px; /* Adicionei para limitar a largura máxima */
+        height: auto; /* Ajusta a altura automaticamente */
         border: 4px solid var(--fonte-primaria-clara);
         border-radius: 10px;
         color: var(--font-color-cinza);
         flex-wrap: wrap;
-    }
-
-    .project-content {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        margin: 5%;
-        transform: rotateX(90deg);
-    }
-
-    .imagem-project {
-        width: 200px;
-        height: 150px;
-        border-radius: 5px;
+        padding: 1rem; /* Adicionei padding para melhor espaçamento */
     }
 
     .project h1 {
         font-weight: 400;
         opacity: 0.6;
-        font-size: 14px;
+        font-size: 18px; /* Ajuste o tamanho da fonte */
         font-family: "Exo", sans-serif;
         transition: 0.3s;
+        text-align: center; /* Centralize o texto */
     }
 
     .project p {
         margin: 0;
-        margin-left: 4%;
-        font-size: 8px;
+        font-size: 12px; /* Ajuste o tamanho da fonte */
         text-align: center;
         font-family: "Roboto", sans-serif;
-        font-weight: 200;
-        padding: 2px;
-        line-height: 1.1;
+        font-weight: 400; /* Ajuste o peso da fonte */
+        padding: 0.5rem; /* Ajuste o padding */
+        line-height: 1.2;
         opacity: 0.6;
         transition: 0.3s;
+    }
+
+    .mini-container {
+        justify-content: center; /* Centralize os itens */
+        margin-left: 0; /* Remova a margem esquerda */
     }
 
     .mini-container img {
@@ -256,55 +176,30 @@
     }
 
     .button-container {
-        display: flex;
-        justify-content: center;
-        gap: 6px;
-        margin-left: 5%;
-        margin-top: 25%;
-        transition: all 0.8s;
+        gap: 0.5rem; /* Ajuste o gap para melhor espaçamento */
     }
 
     .repo-button {
-        margin-right: 5%;
-        padding: 5px;
+        margin-right: 0; /* Remova a margem direita */
+        padding: 10px;
         background-color: transparent;
         color: #fff;
-        width: 90px;
+        width: auto; /* Ajuste a largura automaticamente */
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 14px;
+        font-size: 12px; /* Ajuste o tamanho da fonte */
         font-family: "Exo", sans-serif;
         font-weight: 400;
-        gap: 8px;
+        gap: 4px; /* Ajuste o gap */
         text-decoration: none;
         border: 2px solid var(--fonte-primaria-clara);
         border-radius: 10px;
         transition: 0.8s;
     }
 
-
     .repo-button img {
         width: 20px;
         filter: saturate(0);
     }
-
-    .preview-button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 12px;
-        font-family: "Exo", sans-serif;
-        font-weight: 200;
-        width: 90px;
-        color: #fff;
-        background-color: var(--fonte-primaria-clara);
-        padding: 5px;
-        text-decoration: none;
-        border: 2px solid var(--fonte-primaria-clara);
-        border-radius: 10px;
-        transition: 0.3s;
-    }
-
-
 }
